add margin to text

--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,13 @@
 .About-Me{
   color: red;
 }
+
+.p1{
+  margin-top: 9px;
+  margin-bottom: 15px;
+}
+
+p{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
